<?xml version="1.0"?>
<package format="2">
  <name>or_tf</name>
  <version>1.0.0</version>
  <description>
    OpenRAVE plugin that connects vicon output to openrave.
  </description>
  <maintainer email="m.r.dogar@leeds.ac.uk">Dr. Mehmet Dogar</maintainer>
  <author email="m.r.dogar@leeds.ac.uk">Dr. Mehmet Dogar</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>openrave_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
