<?xml version="1.0"?>
<package format="2">
  <name>or_tf</name>
  <version>1.0.0</version>
  <description>
    Plugin for listening to tf messages and update OpenRAVE Kinbodies in realtime.
  </description>
  <author email="m.r.dogar@leeds.ac.uk">Mehmet Dogar</author>
  <maintainer email="m.r.dogar@leeds.ac.uk">Mehmet Dogar</maintainer>
  <maintainer email="r.papallas@leeds.ac.uk">Rafael Papallas</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>openrave_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
